blockml/test/errors/01_yaml/e7/e7.view
view: e7
label: 'orders'                           #found duplicate "label:" parameters
label: 'orders5'                          #found duplicate "label:" parameters
table: [flow-1202:bqtest.orders]
fields:

- dimension: order_id
  sql: id

- dimension: manager_id
  sql: m_id

- dimension: city
  sql: city
